Apache ODF Toolkit Change Log
=============================

======= Release 0.6.2 =======

Release wiki page: https://cwiki.apache.org/confluence/display/ODFTOOLKIT/0.6.2-incubating

Versions of major components
----------------------------

* Apache Xerces 2.9.1 (http://xerces.apache.org/mirrors.cgi)
* Apache Jena 2.11.2 (http://jena.apache.org/download/index.html)
* Apache Commons Validator 1.5.0 (http://commons.apache.org/proper/commons-validator//download_validator.cgi)

For a full dependecy list run mvn dependency:tree from the top level in the source module or see the release wiki page.

Optimizations
-------------
* ODFTOOLKIT-200 Supply signature and manifest features to ODFDOM
* ODFTOOLKIT-294 Adding the XSL stylesheet for extracting default values to XSLT_RUNNER XSL sample folder
* ODFTOOLKIT-374 Set the field "Last Modified By" in the metadata file
* ODFTOOLKIT-417 Missing methods for set and get background-color, subscripted and superscripted for a paragraph
* ODFTOOLKIT-418 missing method to find an embedded section
* ODFTOOLKIT-420 missing functions in TextProperties set/get background color
* ODFTOOLKIT-426 PERFORMANCE: simple Document.getCopyStyleList improvements to reduce String allocation, hashing, etc.
* ODFTOOLKIT-436 odfvalidator: better error reporting
* ODFTOOLKIT-437 odfvalidator: make schema files configurable from cmd line
* ODFTOOLKIT-438 odfvalidator: always honour input file on cmd line
* ODFTOOLKIT-440 Java base line: Change to JDK 6 for next release

Bug Fixes
---------
* ODFTOOLKIT-300 Memory Leak in ODF Simple API
* ODFTOOLKIT-323 Remove old references to odftoolkit.org site
* ODFTOOLKIT-368 Column.setWidth wrong size
* ODFTOOLKIT-379 NullPointerException in Paragraph.getTextContent()
* ODFTOOLKIT-386 Project doesn't build with JDK 8
* ODFTOOLKIT-388 Test hangs when iterating over a spreadsheet created with LibreOffice 4.0.0
* ODFTOOLKIT-391 Publish ODF Toolkit artifacts to Maven Central + tag release version in SVN